# SQLAS

./: .gitignore  CHANGELOG.md  DOCUMENTATION.md  LICENSE  README.md  SQLAS_vs_Market.html  pyproject.toml
docs/: DOCUMENTATION.md
examples/sql-ai-agent/: .env.example  README.md
examples/sql-ai-agent/backend/: agent.py  config.py  database.py  eval_framework.py  eval_runner.py  health.db  ingest.py  main.py  models.py  requirements.txt  test_sqlas_package.py  tracing.py
examples/sql-ai-agent/data/: health_dataset_1.csv  health_dataset_2.csv
examples/sql-ai-agent/docs/: DOCUMENTATION.md
examples/sql-ai-agent/frontend/: index.html  package.json
examples/sql-ai-agent/frontend/src/: App.jsx  index.css
examples/sql-ai-agent/frontend/src/components/: ChatInterface.jsx  CodeBlock.jsx  DataTable.jsx  MessageBubble.jsx  Sidebar.jsx
sqlas/: __init__.py  agentic.py  benchmarks.py  cache.py  context.py  core.py  correctness.py  evaluate.py  feedback.py  guardrails.py  integrations.py  production.py  prompt_registry.py  quality.py  response.py  runner.py  safety.py  schema_quality.py  ui.py  visualization.py
sqlas-ui/: index.html  package-lock.json  package.json
sqlas-ui/src/: App.css  App.jsx
sqlas-ui/src/components/: Sidebar.jsx  ui.jsx
sqlas-ui/src/components/pages/: Benchmark.jsx  Dashboard.jsx  Evaluate.jsx  History.jsx  Results.jsx  Settings.jsx
tests/: test_context.py  test_execute_fn.py  test_large_schema.py  test_sqlas.py  test_v2.py
